crates/bevy_naga_oil/src/compose/tests/expected/conditional_missing_import.txt
error: required import 'b' not found
  ┌─ tests/conditional_import_fail/top.wgsl:6:12
  │
6 │     return b::C;
  │            ^
  │
  = missing import 'b'

